along with this program. If not, see <http://www.gnu.org/licenses/>.

CHANGELOG
=========
v15.0.00
--------
	Headlines
		...

	Changes With Important Notices
		...

	Significant Changes
		...

	Security
		...

	Tweaks & Bug Fixes
		i18n: fixed erroneous Georgian language code
		Students: fixed School History section in Student Profile to exclude upcoming years
		Timetable Admin: added link from course view in Manage Courses & Classes to edit class enrolment
		User Admin: improved usability of feedback in Step 3 of the rollover

v14.0.00
--------
	Headlines
		Object oriented form API
		Added the ability to manage system notifications and send specific notices to different users
		Activated Albanian, Thai and Vietnamese as complete languages

	Changes With Important Notices
		Attendance: fixed default reason from Pending to blank, reset all reasons for existing Present, Pending logs
		Attendance: dropped legacy tables gibbonPlannerEntryAttendance, gibbonPlannerEntryAttendanceLog

	Significant Changes
		System: added unit and acceptance testing environments for Gibbon developers

	Security
		System: fixed PHP code execution vulnerability
		System: fixed infinite nested index reload bug
		System: tightened rules for valid elements in TinyMCE text fields
		System: removed Allowable HTML from System Settings interface
		System: updated PHPMailer to latest version
		System: removed all code samples from /lib libraries
		System: fixed SVG code execution vulnerability
        System: added input sanitization to public forms

	Tweaks & Bug Fixes
		System: improved Fast Finder student search permissions
		System: added Albanian and Thai as development languages
		System: added Moroccan dirham as a currency option
		System: upgraded jQuery to v2.2.4 and jQuery Migrate to v1.4.1
		System: fixed bug preventing jQuery Chained from working properly
		System: allow user login with either username or email, if email is unique