@@ -62,6 +62,7 @@ if ($gibbonTTID == '' or $gibbonSchoolYearID == '') { echo 'Fatal error loading 
                 //Validate Inputs
                 $name = $_POST['name'];
                 $nameShort = $_POST['nameShort'];
+                $color = $_POST['color'];
                 $gibbonTTColumnID = $_POST['gibbonTTColumnID'];
 
                 if ($name == '' or $nameShort == '' or $gibbonTTColumnID == '') {
@@ -86,8 +87,8 @@ if ($gibbonTTID == '' or $gibbonSchoolYearID == '') { echo 'Fatal error loading 
                     } else {
                         //Write to database
                         try {
-                            $data = array('name' => $name, 'nameShort' => $nameShort, 'gibbonTTColumnID' => $gibbonTTColumnID, 'gibbonTTDayID' => $gibbonTTDayID);
-                            $sql = 'UPDATE gibbonTTDay SET name=:name, nameShort=:nameShort, gibbonTTColumnID=:gibbonTTColumnID WHERE gibbonTTDayID=:gibbonTTDayID';
+                            $data = array('name' => $name, 'nameShort' => $nameShort, 'color' => $color, 'gibbonTTColumnID' => $gibbonTTColumnID, 'gibbonTTDayID' => $gibbonTTDayID);
+                            $sql = 'UPDATE gibbonTTDay SET name=:name, nameShort=:nameShort, color=:color, gibbonTTColumnID=:gibbonTTColumnID WHERE gibbonTTDayID=:gibbonTTDayID';
                             $result = $connection2->prepare($sql);
                             $result->execute($data);
                         } catch (PDOException $e) {
