@@ -772,6 +772,20 @@ function renderTT($guid, $connection2, $gibbonPersonID, $gibbonTTID, $title = ''
                 if ($day['schoolDay'] == 'Y') {
                     $dateCorrection = ($day['sequenceNumber'] - 1);
 
+                    $backgroundColor = '';
+                    try {
+                        $dataDay = array('date' => date('Y-m-d', ($startDayStamp + (86400 * $count))), 'gibbonTTID' => $gibbonTTID);
+                        $sqlDay = 'SELECT nameShort, color FROM gibbonTTDay JOIN gibbonTTDayDate ON (gibbonTTDay.gibbonTTDayID=gibbonTTDayDate.gibbonTTDayID) WHERE date=:date AND gibbonTTID=:gibbonTTID';
+                        $resultDay = $connection2->prepare($sqlDay);
+                        $resultDay->execute($dataDay);
+                    } catch (PDOException $e) {}
+                    if ($resultDay->rowCount() == 1) {
+                        $rowDay = $resultDay->fetch();
+                        if ($rowDay['color'] != '') {
+                            $backgroundColor = "; background-color: #".$rowDay['color']."; background-image: none";
+                        }
+                    }
+
                     $output .= "<th style='vertical-align: top; text-align: center; width: ";
                     if ($narrow == 'trim') {
                         $output .= (550 / $daysInWeek);
@@ -780,19 +794,12 @@ function renderTT($guid, $connection2, $gibbonPersonID, $gibbonTTID, $title = ''
                     } else {
                         $output .= (550 / $daysInWeek);
                     }
-                    $output .= "px'>";
+                    $output .= "px".$backgroundColor."'>";
                     if ($nameShortDisplay != 'Timetable Day Short Name') {
                         $output .= __($guid, $day['nameShort']).'<br/>';
                     }
                     else {
-                        try {
-                            $dataDay = array('date' => date('Y-m-d', ($startDayStamp + (86400 * $count))), 'gibbonTTID' => $gibbonTTID);
-                            $sqlDay = 'SELECT nameShort FROM gibbonTTDay JOIN gibbonTTDayDate ON (gibbonTTDay.gibbonTTDayID=gibbonTTDayDate.gibbonTTDayID) WHERE date=:date AND gibbonTTID=:gibbonTTID';
-                            $resultDay = $connection2->prepare($sqlDay);
-                            $resultDay->execute($dataDay);
-                        } catch (PDOException $e) {}
-                        if ($resultDay->rowCount() == 1) {
-                            $rowDay = $resultDay->fetch();
+                        if (!empty($rowDay['nameShort']) && $rowDay['nameShort'] != '') {
                             $output .= $rowDay['nameShort'].'<br/>';
                         }
                         else {
