@@ -33,6 +33,7 @@ v15.0.00
 	Tweaks & Bug Fixes
 		i18n: fixed erroneous Georgian language code
 		Students: fixed School History section in Student Profile to exclude upcoming years
+		Timetable: added ability to set and display a background colour for timetable days
 		Timetable Admin: added link from course view in Manage Courses & Classes to edit class enrolment
 		User Admin: improved usability of feedback in Step 3 of the rollover
 
